modified:   0-Abstract.tex 	modified:   1-Introduction.tex 	modified:   2-Developement.tex 	modified:   3-Project.tex 	modified:   4-Conclusion.tex 	modified:   main.pdf 	modified:   main.tex 	modified:   mybib.bib

--- a/Thesis/1-Introduction.tex
+++ b/Thesis/1-Introduction.tex
@@ -57,7 +57,7 @@ These $p+1$ fermions correspond to the decomposition of a ten-dimensional Majora
 $\lambda_a$.
 This particle content can be arranged into a vector supermultiplet of $U(1)$ with $16$ supersymmetries
 in $(p+1)$ dimensions. 
-Thus, a D$p$-brane reduces the degree of supersymmetry of the type IIA theory by half.
+Thus, a D$p$-brane reduces the degree of supersymmetry of the type IIA theory by a half.
 
 In order to find out the action of a D$p$-brane we must realize that it corresponds to the
 $(p+1)$-dimensional effective action of the massless open string excitations of the D$p$-brane.
@@ -148,7 +148,7 @@ The D6-branes span all $M_4$ and a line in each $\mathbb R^2$ plane, such that t
 two stacks is given by $\theta_i$ for each plane.
 It can be shown that the condition $\theta_1\pm\theta_2\pm\theta_3=0 (\mathrm{mod} 2\pi)$ implies $\mathcal N=1$ 
 supersymmetry in 4 dimensions, provided that no angle vanishes.
-If some of the angles vanish, the supersymmetry would we enhanced.
+If some of the angles vanish, supersymmetry would we enhanced.
 
 The reason we have used D6-branes and no other dimension of D$p$-branes is that they would not lead to chiral fermions in 4 dimensions.
 Intuitively, two D6-branes allow to define an orientation in the transverse 6-dimensional space, which would not be possible
