--- a/Thesis/4-Conclusion.tex
+++ b/Thesis/4-Conclusion.tex
@@ -1,10 +1,12 @@
-\section{Conclusions and outlook}
+\chapter{Conclusion and outlook}
 
-model building obstruction
+We have seen that D$6$-branes wrapping SLags three-cycles on Fermat's quintic present a serious obstruction
+for model building, since they do allow a chiral spectrum.
+Since the intersection number is a topological quantity, it is not expected to change under deformations.
+In contrast, the volume of SLags does change, but it requires to calculate an integral which we do not 
+now how to compute analytically.  
+Thus, we have only obtained an estimate of how the volume varies under a particular deformation.
+It would be interesting to discuss how the volume is affected by other deformations.
 
-for especific def, vol def param psi is not easy to calculate, region proxy
-
-
-
-check same study for other deformations
-study type singularities 
+We encountered that deformations of the Fermat's quintic lead to singularities.
+In a specific example  we obtain a conifold singularity, but generic deformations would require a detailed study of the type of singularities, possibly in terms of du Val singularities.
