--- a/Thesis/mybib.bib
+++ b/Thesis/mybib.bib
@@ -12,6 +12,21 @@ mendeley-groups = {TFM},
 title = {{String Theory and Particle Physics}}
 }
 
+@book{GSW1,
+author = {Green, M. B. and Schwarz, J. H. and Witten, E},
+file = {:home/jinawee/Documents/Clase/TFM/Papers/[Luis{\_}E.{\_}Ib{\'{a}}{\~{n}}ez,{\_}Angel{\_}M.{\_}Uranga]{\_}String{\_}theory{\_}(BookZZ.org).pdf:pdf},
+year = {1988},
+mendeley-groups = {TFM},
+title = {{Superstring Theory: Volume 1}}
+}
+
+@book{GSW2,
+author = {Green, M. B. and Schwarz, J. H. and Witten, E},
+file = {:home/jinawee/Documents/Clase/TFM/Papers/[Luis{\_}E.{\_}Ib{\'{a}}{\~{n}}ez,{\_}Angel{\_}M.{\_}Uranga]{\_}String{\_}theory{\_}(BookZZ.org).pdf:pdf},
+year = {1988},
+mendeley-groups = {TFM},
+title = {{Superstring Theory: Volume 2}}
+}
 
 @article{Greene1997,
 abstract = {These lectures are devoted to introducing some of the basic features of quantum geometry that have been emerging from compactified string theory over the last couple of years. The developments discussed include new geometric features of string theory which occur even at the classical level as well as those which require non-perturbative effects. These lecture notes are based on an evolving set of lectures presented at a number of schools but most closely follow a series of seven lectures given at the TASI-96 summer school on Strings, Fields and Duality.},
