--- a/Thesis/0-Abstract.tex
+++ b/Thesis/0-Abstract.tex
@@ -1,16 +1,24 @@
-\todoin{Motivation and goals. Previous research.}
-This work 
+\chapter{Introduction}
 
-connect real work
-compactification
-tiia 
-toroidal orientifold
-other backgrounds, quintic
-topo+def, ints, volu and mod building
+In order to connect String Theory with the observable world, 
+we would desire to obtain the Standard Model as its low-energy effective theory.
+Although there is still a lot of work to do before reaching this goal,
+a promising mechanism is based on Calabi-Yau orientifold compactifications of Type IIA string theory.
+Most of the work has been done on toroidal orientifold compactifications, 
+but from the perspective of model building, it is always useful to extend the compactifications backgrounds to smooth Calabi-Yau's.
+In this thesis we study a well-know Calabi-Yau manifold, Fermat's quintic and
+its potential usefulness with respect to Type IIA model building with intersecting D6-branes.
 
-liter fermat
-we turn deformations
-vol more interesting than topology
+The relevant properties of the quintic that we try to describe for the 
+purpose of model building are the special-Lagrangians and their deformations,
+their intersection numbers and their volumes.
+We also try to apply a similar treatment to the deformations of Fermat's quintic,
+will are less understood.
+%well studied example Fermat's quintic and try to a similar treatment of its deformations
 
-
-\todoin{Outline}
+The outline of this thesis is as follows.
+In chapter 1 we describe type IIA string theory and D6-branes in flat space, following mostly the textbook \cite{Ibanez}. 
+In chapter 2 we review type IIA compactifications, in particular, Calabi-Yau orientifolds, with the aid of differential geometry tools.
+This chapter is based on the textbooks \cite{Ibanez}\cite{GSW1}\cite{GSW2}.
+In chapter 3 we study the quintic and its implications to model building.
+Finally, in chapter 4 we summarize and discuss some additional aspects which ought to be investigated in the near future.
